# auto_parts_shop

./: .gitignore  Pipfile  README.md  db.sqlite3
backend/: README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/apps/order/: models.py  serializers.py  urls.py  views.py
backend/apps/order/migrations/: 0001_initial.py  0002_initial.py  0002_order_product.py  0003_auto_20231003_2230.py  0003_order_create_time.py  0004_remove_order_seller.py
backend/apps/product/: models.py  serializers.py  urls.py  views.py
backend/apps/product/migrations/: 0001_initial.py  0002_category.py  0002_initial.py  0003_auto_20231002_1335.py  0003_product_description.py  0004_product_type.py  0004_remove_product_applicable.py  0005_alter_product_type.py  0005_remove_product_category.py  0006_alter_product_applicable.py  0006_auto_20231002_1339.py  0007_alter_product_description.py  0007_product_gallery.py  0008_auto_20231002_1846.py  0008_auto_20240414_1227.py  0009_alter_category_parent.py  0009_alter_productimage_image.py  0010_alter_product_gallery.py  0011_auto_20231009_1209.py  0012_alter_productgallery_image.py  0013_alter_productgallery_image.py  0014_alter_productgallery_name.py  0015_auto_20231010_2017.py
backend/apps/user/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/user/migrations/: 0001_initial.py  0002_auto_20231013_2302.py  0002_favorite.py  0003_delete_favorite.py  0004_favorite.py
backend/server/: settings.py  urls.py
backend/utils/: authentication.py  custom_exception.py
frontend/: README.md  nuxt.config.ts  (+2 more)
(+72 files in other folders)
