[tool.poetry]
name = "auto-pars-backend"
version = "0.1.0"
description = ""
authors = ["YernarT <toktaryernar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.8"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.15.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
